<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:orientation="vertical"
    android:background="@color/windowBackground"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/location_name_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:textColor="@color/colorSecondaryText"
            android:textSize="18dp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/event_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:textSize="12dp"
            android:textColor="@color/colorPrimaryText"
            />

        <TextView
            android:id="@+id/name_tv2"
            android:text="@string/event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:textColor="@color/colorSecondaryText"
            android:textSize="12dp"
            />

        <EditText
            android:id="@+id/date_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="0dp"
            android:gravity="left"
            android:textSize="16dp"
            android:hint="@string/date"
            android:drawableLeft="@drawable/ic_date_range_black_18dp"
            android:focusableInTouchMode="false"
            android:singleLine="true" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            >
            <TextView
                android:id="@+id/from_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/colorSecondaryText"
                android:text="@string/from"
                android:layout_gravity="left"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                android:textSize="12dp"
                />
            <EditText
                android:id="@+id/start_time_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:textSize="12dp"
                android:layout_toRightOf="@+id/from_tv"
                android:hint="@string/start_time"
                android:textColor="@color/colorPrimaryText"
                android:singleLine="true"
                />

            <TextView
                android:id="@+id/to_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorSecondaryText"
                android:textSize="12dp"
                android:text="@string/To"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/start_time_et"
                />

            <EditText
                android:id="@+id/end_time_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:textSize="12dp"
                android:layout_toRightOf="@+id/to_tv"
                android:hint="@string/end_time"
                android:textColor="@color/colorPrimaryText"
                android:singleLine="true"
                />
        </RelativeLayout>

        <EditText
            android:id="@+id/description_et"
            android:inputType="textMultiLine"
            android:lines="8"
            android:textSize="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textColor="@color/colorPrimaryText"
            android:textColorHint="@color/colorDivider"
            android:hint="@string/event_description"
            android:gravity="top|left"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@drawable/event_edittext_style"
            android:scrollbars="vertical"
            />

        <EditText
            android:id="@+id/tags_et"
            android:inputType="textMultiLine"
            android:lines="8"
            android:textSize="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textColor="@color/colorPrimaryText"
            android:textColorHint="@color/colorDivider"
            android:hint="@string/event_tag_description"
            android:gravity="top|left"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@drawable/event_edittext_style"
            android:scrollbars="vertical"
            />

        <TextView
            android:id="@+id/feedback_filler"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />


        <ImageButton
            android:id="@+id/save_btn"
            android:layout_gravity="right"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/done_green_36dp" />

    </LinearLayout>


</ScrollView>
